# era-games-crawler

./: .gitignore  README.md  config.example.json  pyproject.toml
.github/workflows/: polling.yml
crawler/: task.py
