[tool.poetry]
name = "era-games-crawler"
version = "0.1.0"
description = ""
authors = ["lackbfun <git@lackb.fun>"]
readme = "README.md"
packages = [{include = "crawler"}]

[tool.poetry.scripts]
test = "crawler.task:test"
task = "crawler.task:main"

[tool.poetry.dependencies]
python = "^3.10"
pendulum = "^2.1.2"
requests = "^2.28.1"
lxml = "^4.9.1"
bs4 = "^0.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
